--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Order summary card</title>
+  <link rel="css" href="css/styles.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -15,23 +16,44 @@
   </style>
 </head>
 <body>
+<link rel="img" href="../images/images\pattern-background-desktop.svg">
+  <div class="main-container">
 
-  Order Summary
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
 
-  Annual Plan
-  $59.99/year
+<div class="top-container">
+  <h1>Order Summary
+</h1>
 
-  Change
+  <p>You can now listen to millions of songs, audiobooks, and podcasts on any
+  device anywhere you like!</p>
+</div>
 
-  Proceed to Payment
-  Cancel Order
-  
+<div class="middle-container">
+<h3>Annual Plan</h3>
+
+<p>$59.99/year</p>
+
+<div>
+  <a href="#">Change</a>
+</div>
+
+</div>
+
+<div class="botton-container">
+
+<!-- make the botton -pending -->
+  <a href="#">Proceed to Payment</a>
+
+  <a href="#">Cancel Order</a>
+
+</div>
+
+</div>
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Mariana Dudzik</a>.
   </div>
 </body>
 </html>
