--- a/index.html
+++ b/index.html
@@ -8,28 +8,16 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | Order summary card</title>
-  <link rel="stylesheet" href="css/master.css">
+  <link rel="stylesheet" href="css/styles.css">
 
+<link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300&display=swap" rel="stylesheet">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
 <body>
-  <link rel="img" href="../images/images\pattern-background-desktop.svg">
   <div class="main-container">
 
-
-
+<img class="top-img" src="illustration-hero.svg" alt="hero-img">
     <div class="top-container">
       <h1>Order Summary
       </h1>
