--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <title>Frontend Mentor | Order summary card</title>
   <link rel="stylesheet" href="css/styles.css">
 
-<link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
   <div class="main-container">
 
-<img class="top-img" src="illustration-hero.svg" alt="hero-img">
+    <img class="top-img" src="illustration-hero.svg" alt="hero-img">
     <div class="top-container">
       <h1>Order Summary
       </h1>
@@ -27,24 +27,16 @@
     </div>
 
     <div class="middle-container">
+      <img class="icon-music" src="images/icon-music.svg" alt="icon-music">
       <h3>Annual Plan</h3>
-
       <p>$59.99/year</p>
-
-      <div>
-        <a href="#">Change</a>
-      </div>
-
+      <a class="change-a" href="#">Change</a>
     </div>
 
-    <div class="botton-container">
 
-      <!-- make the botton -pending -->
-      <a href="#">Proceed to Payment</a>
+      <a class="btn" href="#">Proceed to Payment</a>
+      <a class="cancel" href="#">Cancel Order</a>
 
-      <a href="#">Cancel Order</a>
-
-    </div>
 
   </div>
 
