Report challenge corrections

--- a/index.html
+++ b/index.html
@@ -15,35 +15,27 @@
 </head>
 
 <body>
-  <div class="main-container">
-
+    <div class="main-container">
     <img class="top-img" src="illustration-hero.svg" alt="hero-img">
     <div class="top-container">
-      <h1>Order Summary
-      </h1>
-
+      <h1>Order Summary</h1>
       <p>You can now listen to millions of songs, audiobooks, and podcasts on any
         device anywhere you like!</p>
     </div>
 
     <div class="middle-container">
       <img class="icon-music" src="images/icon-music.svg" alt="icon-music">
-      <h3>Annual Plan</h3>
+      <h2>Annual Plan</h2>
       <p>$59.99/year</p>
       <a class="change-a" href="#">Change</a>
     </div>
-
-
-      <a class="btn" href="#">Proceed to Payment</a>
-      <a class="cancel" href="#">Cancel Order</a>
-
-
+    <a class="btn" href="#">Proceed to Payment</a>
+    <a class="cancel" href="#">Cancel Order</a>
   </div>
-
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Mariana Dudzik</a>.
   </div>
-</body>
+    </body>
 
 </html>
