--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="main-container">
+  <div class="card">
     <img class="top-img" src="illustration-hero.svg" alt="hero-img">
     <div class="top-container">
       <h1>Order Summary</h1>
@@ -29,6 +29,8 @@
       <p>$59.99/year</p>
       <a class="change-a" href="#">Change</a>
     </div>
+
+    <!-- Botton container -->
     <a class="btn" href="#">Proceed to Payment</a>
     <a class="cancel" href="#">Cancel Order</a>
   </div>
@@ -36,6 +38,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Mariana Dudzik</a>.
   </div>
-    </body>
+</body>
 
 </html>
